# ChangeLog for mate-base/mate-control-center
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mate-base/mate-control-center/ChangeLog,v 1.1 2014/03/22 20:52:05 tomwij Exp $

*mate-control-center-1.6.2 (22 Mar 2014)

  22 Mar 2014; Tom Wijsman <TomWij@gentoo.org>
  +files/mate-control-center-1.6.2-libsecret.patch,
  +mate-control-center-1.6.2.ebuild, +metadata.xml:
  New ebuild for mate-base/mate-control-center, the MATE Desktop configuration
  tool; imported from the mate-overlay, reviewed and adjusted.