@@ -3,17 +3,17 @@ Hash: SHA256
 
 AUX mate-control-center-1.6.2-libsecret.patch 568 SHA256 3518a51ca310ff548a5e910ff709ef6393a80b279213d145194d72b11a481470 SHA512 29eb83df4e65167c7f92d146c5f92ddee593f6f4895c3edfd9da243ef7c3c7c50c5c85a0c1e27ec6685aa2020679ed959a0953930768c9c2ec91fdf483b52523 WHIRLPOOL ecfc5a228a16c4ac9b9e4890ad1f3a4edfec999cc19b819f7b1842085bc12dd5f7aa6a418930765d8a4eccad04f8e58227f94b9aa3853e4b074ae5687f124110
 DIST mate-control-center-1.6.2.tar.xz 1278120 SHA256 28873b49dbc966b898ab386e443dfd4bb0569e2bf06c49a67b4470e1c67cf2d4 SHA512 b7dfaf02100fc447ddc2b631f8d696646be4b49d1063ac96050a3ae58da7aa1a4a78c3b2b7230b37c5f1ee6dfb4dd7e27609efecc5f0d14312afc5c1e018ac83 WHIRLPOOL 81c9f268bca98f94b1c50ea6d90d28a68666149ea78a1a1e7368e0b892dfc46fa29079b97837504dccdcea565a874dcb5f09dd4cd242f4bf3eaffc25a40ec463
-EBUILD mate-control-center-1.6.2.ebuild 2102 SHA256 dd94ad16e76a8b08de3c9ec418b533114bdb11608c73431bfb5fd271d7c2502d SHA512 a1361951dd9aeb466c3e0f54479459c8e779c3c4d8aa91987ac74e4009cb0e135f1846eb2766dc785d3e4bfaeb77a47ab8de6529ee3eb99ba9f797505a74c29e WHIRLPOOL 922c4255f63f2d324f49848649e65f9a3349b7391e439fdcb8b4f77172a2e43234c46b5e2a9d84bfadf49d932d55ec5773bc3eafcb4bac99823620f0ece9fe5d
-MISC ChangeLog 566 SHA256 b6cf96c954d82ae748b24c1daf6015c7f862bfc5e29c5caa255ea6f5b4c46029 SHA512 0e7f17f573fd2bb15e6ac1c4d7fa55eca6d0df20a60cbb5b240208fea5956d0a7faf956a2b0b39b218798764bb5c9b4c738b1fae30f6ce86e914f4e82624578f WHIRLPOOL 03078f67e5d05eb0e38a59527638e01e74b0383e61b2c3c9477915945c4015c3fb25a5a124b88c0911b0737e3346f31ff0029748e1a6ad530ddb182e549c84f5
+EBUILD mate-control-center-1.6.2.ebuild 2132 SHA256 cd03ddcb08522179e42fb53e87fa4fc04ce25e2b92ca95702860f2fe07464ca3 SHA512 de2ee71395b2ae68d59cda6c48da7198e60a652884f36cd26dcd8527fb4a20f9b638ff84fef9b9640a019da2b4be2212bcfc0386577502429cf8cf3bb968010a WHIRLPOOL 9fb2d28d2907c8c1c0cc11a68e2e99554b4758447cf97a8f9f4bb041e6371d2e190dd36f949b53f11b4ac978d2b2d862b1d3267767200e519e9d4e6abd2433b5
+MISC ChangeLog 752 SHA256 7392ec72010b87754b865a1e4b91fed265511282ddc2f7cf71cb70466e6f305c SHA512 a136d4d360137c75c1067bf9692f90c11ff3d1302773562bf343ee67c0eff6891b8a6adbf8e4b0467fc75f6e7b580ebb327142e7764e9141e04d14082a5971b6 WHIRLPOOL 5fe38424c64a49cf0ffe78265193c72a2564aa499bdffbd3d49d1b27ebbf7624f55fc96cd770078386143ce3b46dc7f7c8b0483eddd7c65814755bf8391f171c
 MISC metadata.xml 230 SHA256 c188c403bd41d5dfe348e4809c2350a5a2fca98d46f8adae83a36d89af439ecd SHA512 17d13ca08cb96bf73a2c821019fd00677f17579c54b5543c1653c9f6106d7c52ad14b4a7ff72000ab7f59b7031e4471756b96864ca2fedef2e3a047fa0eb71eb WHIRLPOOL 39073c2fd817e3c41775408adf7271656a744ccd967e74770c673506c8c78cd11356b0cd28eeb16fe7350e8708141ad25037c45066263f2ed1b85d5270743986
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTLff0AAoJEJWyH81tNOV90tgIAJSRhyzzLOuzNbgEmgO4ejw+
-6lIB4Weq895sKd8vQWepRxYv6FQn6ZVeMJL8LqjExPyIZITGn/HxVjgzEY26C+7Q
-rPwFFDtqwBQ1cZS52GAN7fPUENqRz/Z2UjHtPnBAawudvbJtsKZJLwG8H7z4B8DV
-m/u6BcKQMaKHWeFKFcwyGmLnVCNDXENzIlSKPAJ5B2y759g5X0GcTePCc2DBIip/
-s5dc6lP+EwHzvZ76K9rxzNch+7A5MxndEhH4/t22TwkvIFKqkN5N1h6rJY+qH7mi
-EOujruyjGKf0Xz/opOhUhax2kAbfKUcuOZTojEnRdQxuxM/8i8L0010yCofqsWY=
-=trmB
+iQEcBAEBCAAGBQJTMFdVAAoJEJWyH81tNOV9lREIAIlTzGAAzV8RY8bcW3nGjNs0
+IYzNQyfBg09Fcr8hX7A3yMSciFYaCnNkucsRWLdp+QCVHe+MkivapyATux2iTGkz
+o5yaXW+si4gyfv5BNO/PmXkAsBvVJctTyV2FBgBDjJTOAci5ABsUsVoHYwphwnT5
+WP8kWDHvHwFAs3XpjZ8bO1NM8WQUReXYmJrPl3wyssVx252sWvaOnUo/wFIlloV4
+nh+Y12etVHIQSJ8ZlLQyxngCwWACBVMl5iSDtvPaF2gRY+wQVJlDGosqaOKCzQjV
+8QxkF852WEDbP6wralwwmBksGEOTFGdTMlyghgF9kDuDf9VW92dBhauVcadxE2E=
+=eyiW
 -----END PGP SIGNATURE-----
