@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mate-base/mate-control-center/mate-control-center-1.6.2.ebuild,v 1.1 2014/03/22 20:52:05 tomwij Exp $
+# $Header: /var/cvsroot/gentoo-x86/mate-base/mate-control-center/mate-control-center-1.6.2.ebuild,v 1.2 2014/03/24 16:03:41 tomwij Exp $
 
 EAPI="5"
 
@@ -83,6 +83,10 @@ src_configure() {
 	gnome2_src_configure \
 		--disable-update-mimedb \
 		--disable-appindicator
+}
+
+src_compile() {
+	emake -j1
 }
 
 DOCS="AUTHORS ChangeLog NEWS README TODO"
