@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST mate-panel-1.6.1.tar.xz 1938144 SHA256 88bf0620e1eba7e2e165060ac6fa21896b8e24d1ac742ff6f8c884c5408dd53b SHA512 bd2f7c2433dabcae5dd596e81125d70a08e6d6a3beffee97078c0b8c53527271dd1eed6650d39a7e2a24a579821300e4fb2160b1eeebea3b925a996d7add8dd2 WHIRLPOOL da092bccb5830209fc6e51aaed0a8d9484f668f1499b85e034a4f10bb61637b6519d28a3db817764763dbf93ad1b0f6eda7af6c7760fc4cafa143937b0a37252
-EBUILD mate-panel-1.6.1.ebuild 1919 SHA256 f9d5d8366969d10241442c2aa27e8f897a79bfe72e1641538ceb0b92fa227cf6 SHA512 670c49312e7a99e1da82be2520def6bd439bb8b87e0e3162a09a06574081f70b85d0428e6f004ccc57d55c24b161aeff1e99461e64e943b3d2b6597ec4235ab6 WHIRLPOOL 0d1a378b426b2121fb758183c51762b6a849d66eebbf6274dce3de95b1dc43d4eab0d3c29acf2ae591bc62c144524603c10e306d576e9b44975969c197a4b512
-MISC ChangeLog 1233 SHA256 5eee1ee5a7fd7a87054c40d53262f37894772070c2261069315925e2a26f0da6 SHA512 ae12aa90ca34cd8622aa0ffd298bf8f99e099598da3fbad58b8988e42580205bb3821f0d6f06fa1ffd76f7b081a8f10ee695c2c03c5478c4d4399c8d115de566 WHIRLPOOL 152b426c5bab7cbf54d5ff326249a74dbe2b99027f247908c1c271efba270f7f2d1ad74caed0958abf018161ba2f90b5944498e1a7fcb1e314351c63f46a7108
+EBUILD mate-panel-1.6.1.ebuild 1949 SHA256 ecdd408d075fd7d709714d8bde1da9583516d29527c7b4aa26327e1d2b54f62a SHA512 95fffba800e938bcd10142301f3cabed9c80fdb4380a53b337b08a700bfd108f95fb4f2d1639b42cc364472d006db68e0f7dcbf72571f5fa826853945a779903 WHIRLPOOL 5c1c28a2e33825a8a6725855a2caf049f0a4ca90a83cd3ec3cd6c33d102e974bb9f6f5dfad38769282e663289651ecce8ef1fb34438f4fed8ee24eef2adacb99
+MISC ChangeLog 1410 SHA256 ff7d12fcf58431a8bda521b6be2f799e093954e2bb0e19c9e2e99828056c0515 SHA512 3dd758d0d9fd8e05f9202e7a4264e051362c28e13fecd40f60fe035720a66373c39d01a053851e87a71fdbf02c9e0a51ce83b457d590f26cc90ab042a632e04f WHIRLPOOL e4c2b6e982b25b412391033af64ca6652af897224d0fef47291aca99fcfe5ce9f2fa525b49d1d0fe2a64171d8f7be3ff95787cf3aa163e5d9ddd98a12b806c23
 MISC metadata.xml 230 SHA256 c188c403bd41d5dfe348e4809c2350a5a2fca98d46f8adae83a36d89af439ecd SHA512 17d13ca08cb96bf73a2c821019fd00677f17579c54b5543c1653c9f6106d7c52ad14b4a7ff72000ab7f59b7031e4471756b96864ca2fedef2e3a047fa0eb71eb WHIRLPOOL 39073c2fd817e3c41775408adf7271656a744ccd967e74770c673506c8c78cd11356b0cd28eeb16fe7350e8708141ad25037c45066263f2ed1b85d5270743986
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTHkMZAAoJEJWyH81tNOV9y40H/Rhhvys3jR8dOHQvbz53pl3f
-qd6G/ppWAjy739ljGWfeu5+USIWXbyyY3u9RYRMGqDQneHePmA0pUefa+H8yyOhg
-a/Ce15JiEiN0Wn/CIo+jpcBrsHJEAsa5+B4Jyy38ojGKm1f6DblgxOsDSl9S+ySo
-FccP2+u2NhDblUiLEcFO6pRKYijfSnxVC9vG2+XphLpYY3jkWuVwCZIWz/yd3TCe
-4C60HvKvBC7dJTS804dy3QLuWlFVe8+EqdO2Y7rO1zI52beR5zuyt0H7U6wH30yG
-zbOzcNiDj/RdzNQbRcJ77PzlPRFF9AqlkirQMtsC8iOcZRtEGkGAG4vXLNjJg+A=
-=xS19
+iQEcBAEBCAAGBQJTMFcWAAoJEJWyH81tNOV9irEH/2c0yOOk1Oegg5sIEMLDMuWn
+O0jlg/83ApdEijKIAQ88Uocd4T1E7gqMKJebmgsPCkH52Gro1Q6fHLmWfeg4lqTH
+eOeOiQIxcpB0mvrgwy5RRJNakdfdkrb4UlSmgOx1QfsI6lZ34h9jbPWxhL743AQd
+6S1/Yyt2gYJSbsiSIylzMsM4SCx6UwEHzBkgw0dt1F2pBi/aK5PtWuKRpvZsPPb2
+J4z9bMexS6svK25Eu2WmN8Vf23crN182pzYMLtL1aT15fxAZmEdIvEQexI4Qie7q
+kWMfrkeUbfWRPOI4bspfjMxxDv5bziHNQ+pvNvZ8Un215J5SUnsocBuuz6IXuOU=
+=J7+v
 -----END PGP SIGNATURE-----
