@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mate-base/mate-panel/mate-panel-1.6.1.ebuild,v 1.6 2014/03/10 22:57:02 tomwij Exp $
+# $Header: /var/cvsroot/gentoo-x86/mate-base/mate-panel/mate-panel-1.6.1.ebuild,v 1.7 2014/03/24 16:02:41 tomwij Exp $
 
 EAPI="5"
 
@@ -72,6 +72,10 @@ src_configure() {
 		$(use_enable networkmanager network-manager) \
 		$(use_enable introspection) \
 		$(use_with X x)
+}
+
+src_compile() {
+	emake -j1
 }
 
 DOCS="AUTHORS ChangeLog HACKING NEWS README"
