@@ -1,6 +1,10 @@
 # ChangeLog for mate-base/mate-panel
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mate-base/mate-panel/ChangeLog,v 1.6 2014/03/10 22:57:02 tomwij Exp $
+# $Header: /var/cvsroot/gentoo-x86/mate-base/mate-panel/ChangeLog,v 1.7 2014/03/24 16:02:41 tomwij Exp $
+
+  24 Mar 2014; Tom Wijsman <TomWij@gentoo.org> mate-panel-1.6.1.ebuild:
+  Temporarily fix parallel build issue with -j1, discovered while building all
+  MATE packages at once.
 
   10 Mar 2014; Tom Wijsman <TomWij@gentoo.org> mate-panel-1.6.1.ebuild:
   Update dependencies per the consensus formed with ssuominen.
