@@ -1,6 +1,10 @@
 # ChangeLog for mate-base/mate-control-center
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mate-base/mate-control-center/ChangeLog,v 1.1 2014/03/22 20:52:05 tomwij Exp $
+# $Header: /var/cvsroot/gentoo-x86/mate-base/mate-control-center/ChangeLog,v 1.2 2014/03/24 16:03:41 tomwij Exp $
+
+  24 Mar 2014; Tom Wijsman <TomWij@gentoo.org> mate-control-center-1.6.2.ebuild:
+  Temporarily fix parallel build issue with -j1, discovered while building all
+  MATE packages at once.
 
 *mate-control-center-1.6.2 (22 Mar 2014)
 
